<resources>
    <string name="app_name">Zcalc</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="plus_minus">+/-</string>
    <string name="del">C</string>
    <string name="parentheses">()</string>
    <string name="percent">%</string>
    <string name="slash">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="star">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="comma">,</string>
    <string name="equally">=</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
</resources>
